--- a/teste/style.css
+++ b/teste/style.css
@@ -34,16 +34,21 @@ img{
 .grid{
     display: grid;
     gap: 20px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(2,1fr);
 }
 
-.foto{
+.titulo{
     grid-column: 1/-1;
 }
 
-.descricao{
-    grid-column: 1/3;
+.info{ 
+    display: grid;
+    place-items: start;
+    place-self: start;
+    gap: 20px;
 }
+
+
 .preco{
     background: #ddd;
     padding: 5px 10px;
