--- a/posicionamento1/style.css
+++ b/posicionamento1/style.css
@@ -15,7 +15,7 @@ h3 {
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
 }
 
@@ -29,6 +29,7 @@ p {
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  margin-top: 60px;
 }
 
 .navigation a {
@@ -37,6 +38,11 @@ p {
   color: #000;
   padding: 15px 30px;
   text-decoration: none;
+  border: 2px solid #fff;
+}
+
+.navigation a:hover{
+  border-color: #ee2211;
 }
 .container {
   display: grid;
@@ -72,13 +78,18 @@ p {
   text-decoration: none;
 }
 
+.botao:hover{
+  background: #900;
+}
+
 .subtitulo {
   text-transform: uppercase;
-  font-size: 64px;
+  font-size: 4rem;
   color: rgba(0, 0, 0, 0.2);
   text-align: right;
   padding: 40px;
   align-self: center;
+  background: url("../imagens/onda.svg");
 }
 
 .vantagens {
@@ -93,8 +104,16 @@ p {
   padding: 20px;
 }
 
+.vantagens-item:nth-child(2n-1){
+  background: #f7f7f7;
+}
+
 .vantagens-item p {
   grid-column: 2;
+}
+
+.vantagens-item:hover {
+  border-left: 4px solid #900;
 }
 .foto {
   max-width: 100%;
