--- a/posicionamento1/style.css
+++ b/posicionamento1/style.css
@@ -14,6 +14,12 @@ h3 {
   margin: 0;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 p {
   font-size: 1.25rem;
   line-height: 1.3;
@@ -27,9 +33,9 @@ p {
 .navigation {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
   justify-content: center;
   margin-top: 60px;
+  gap: 20px;
 }
 
 .navigation a {
@@ -41,7 +47,7 @@ p {
   border: 2px solid #fff;
 }
 
-.navigation a:hover{
+.navigation a:hover {
   border-color: #ee2211;
 }
 .container {
@@ -61,7 +67,12 @@ p {
   justify-items: end;
 }
 
-.detalhe {
+.info h1 {
+  font-size: 2rem;
+}
+
+.info::before {
+  content: "";
   width: 60px;
   height: 4px;
   background: #ee2211;
@@ -78,7 +89,7 @@ p {
   text-decoration: none;
 }
 
-.botao:hover{
+.botao:hover {
   background: #900;
 }
 
@@ -104,7 +115,7 @@ p {
   padding: 20px;
 }
 
-.vantagens-item:nth-child(2n-1){
+.vantagens-item:nth-child(2n-1) {
   background: #f7f7f7;
 }
 
