--- a/posicionamento1/style.css
+++ b/posicionamento1/style.css
@@ -25,6 +25,12 @@ p {
   line-height: 1.3;
 }
 
+.cabecalho{
+  display: grid;
+  justify-content: center;
+  gap: 60px;
+}
+
 .titulo {
   margin-top: 60px;
   text-align: center;
@@ -34,11 +40,11 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 60px;
   gap: 20px;
 }
 
 .navigation a {
+  display: block;
   background: #fff;
   border-radius: 4px;
   color: #000;
@@ -54,6 +60,12 @@ p {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   max-width: 1000px;
+}
+
+.container-imagem img{
+  height: 100%;
+  object-fit: cover;
+  object-position: right;
 }
 
 .info {
@@ -137,4 +149,36 @@ p {
   padding: 40px;
   box-sizing: border-box;
   width: 100%;
+}
+
+
+/* Resposividade */
+
+@media (max-width: 1000px){
+  .container-vantagens{
+    grid-template-columns: 1fr;
+  }
+  .subtitulo{
+    text-align: center;
+  }
+}
+
+@media(max-width: 600px){
+ 
+  .container{
+    grid-template-columns: 1fr;
+  }
+  .info::before{
+    display: none;
+  }
+  .info{
+    justify-items: start;
+    text-align: left;
+  }
+  .cabecalho{
+    gap: 30px;
+  }
+  .subtitulo{
+    font-size: 3rem;
+  }
 }
