concluido os exercicios de flex-box

--- a/flex-blog/css/style.css
+++ b/flex-blog/css/style.css
@@ -2,3 +2,6 @@
 @import "./cabecalho.css";
 @import "./sobre.css";
 @import "./produtos.css";
+@import "./preco.css";
+@import "./qualidade.css"; 
+@import "./footer.css"; 
