concluido os exercicios de flex-box

--- a/flex-blog/css/global.css
+++ b/flex-blog/css/global.css
@@ -1,28 +1,28 @@
-*{
-    margin:0; 
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Nunito',Arial, Helvetica, sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Nunito", Arial, Helvetica, sans-serif;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-ul{
-    list-style: none;
+ul {
+  list-style: none;
 }
 
-body{
-    color: #222222;
+body {
+  color: #222222;
 }
 
-img{
-    display: block;
-    max-width: 100%;
+img {
+  display: block;
+  max-width: 100%;
 }
 
-.container{
-    max-width: 960px;
-    margin: 0 auto; 
+.container {
+  max-width: 960px;
+  margin: 0 auto;
 }
